--- a/packages/components/src/components/custom-select/custom-select.scss
+++ b/packages/components/src/components/custom-select/custom-select.scss
@@ -57,7 +57,7 @@
 
 	&:has(summary span) {
 		[id$="-placeholder"] {
-			@include display.display(none);
+			@include helpers.display(none);
 		}
 	}
 
