--- a/packages/components/src/components/navigation-item/navigation-item.scss
+++ b/packages/components/src/components/navigation-item/navigation-item.scss
@@ -63,7 +63,7 @@
 	align-items: center; // Centering the content vertically and horizontally
 	justify-content: space-between;
 
-	@include display.display(inline-flex);
+	@include helpers.display(inline-flex);
 
 	@include helpers.hover {
 		background-color: colors.$db-adaptive-bg-basic-transparent-full-hovered;
@@ -83,7 +83,7 @@
 
 	@extend %db-overwrite-font-size-md;
 	@include icon-passing.icon-passing;
-	@include display.display(inline-flex);
+	@include helpers.display(inline-flex);
 
 	position: relative;
 	inline-size: auto;
@@ -188,7 +188,7 @@
 
 	margin: 0;
 
-	@include display.display(flex);
+	@include helpers.display(flex);
 
 	flex-direction: column;
 	z-index: 70;
@@ -202,7 +202,7 @@
 
 	@include screen-sizes.screen("md") {
 		.db-mobile-navigation-back {
-			@include display.display(none);
+			@include helpers.display(none);
 		}
 	}
 
@@ -307,7 +307,7 @@
 	}
 
 	&:empty {
-		@include display.display(none);
+		@include helpers.display(none);
 	}
 
 	.db-navigation-item {
@@ -320,7 +320,7 @@
 }
 
 .db-mobile-navigation-back {
-	@include display.display(flex);
+	@include helpers.display(flex);
 
 	font-weight: normal;
 	background-color: colors.$db-adaptive-bg-basic-level-1-default;
