--- a/packages/components/src/components/tag/tag.scss
+++ b/packages/components/src/components/tag/tag.scss
@@ -77,7 +77,7 @@
 	button:nth-of-type(2),
 	dbbutton:nth-of-type(2),
 	&:has(db-button):has(dbbutton) .db-tab-remove-button {
-		@include display.display(none);
+		@include helpers.display(none);
 	}
 
 	> :is(
@@ -112,7 +112,7 @@
 		inline-size: 100%;
 		margin-inline-start: 0;
 
-		@include display.display(flex);
+		@include helpers.display(flex);
 
 		align-items: center;
 
@@ -159,7 +159,7 @@
 
 	a {
 		@extend %default-transition;
-		@include display.display(inline-flex);
+		@include helpers.display(inline-flex);
 
 		align-items: center;
 		text-decoration: none;
