--- a/packages/components/src/styles/internal/_form-components.scss
+++ b/packages/components/src/styles/internal/_form-components.scss
@@ -61,7 +61,7 @@ $db-min-inline-size: var(
 		margin-block-start: variables.$db-spacing-fixed-2xs;
 
 		&:is([data-semantic="successful"], [data-semantic="critical"]) {
-			@include display.display(none);
+			@include helpers.display(none);
 		}
 	}
 }
@@ -160,17 +160,17 @@ $db-min-inline-size: var(
 	> .db-infotext {
 		@if $key == "valid" {
 			&[data-semantic="successful"] {
-				@include display.display(flex);
+				@include helpers.display(flex);
 			}
 			/* stylelint-disable-next-line at-rule-empty-line-before */
 		} @else {
 			&[data-semantic="critical"] {
-				@include display.display(flex);
+				@include helpers.display(flex);
 			}
 		}
 
 		&:not([data-semantic]) {
-			@include display.display(none);
+			@include helpers.display(none);
 		}
 	}
 }
@@ -314,7 +314,7 @@ $input-valid-types:
 		position: relative;
 		flex-direction: column;
 
-		@include display.display(flex);
+		@include helpers.display(flex);
 	}
 
 	&[data-variant="floating"],
@@ -514,7 +514,7 @@ $input-valid-types:
 
 	&:is(label),
 	> label {
-		@include display.display(flex);
+		@include helpers.display(flex);
 
 		align-items: flex-start;
 		position: relative;
