--- a/packages/components/src/styles/internal/_stack-components.scss
+++ b/packages/components/src/styles/internal/_stack-components.scss
@@ -68,7 +68,7 @@ $stack-gaps: (
 }
 
 %default-stack {
-	@include display.display(flex);
+	@include helpers.display(flex);
 
 	gap: variables.$db-spacing-fixed-sm;
 	justify-content: flex-start;
