--- a/packages/foundations/scss/icons/relative.scss
+++ b/packages/foundations/scss/icons/relative.scss
@@ -57,7 +57,8 @@
 	src: url("#{assets-paths.$icons-path}fonts/fallback/icon-font-fallback.woff2")
 		format("woff2");
 }
+
 /* pre-load icon fallback font */
 head {
-  font-family: icon-font-fallback;
+  font-family: icon-font-fallback, sans-serif;
 }
