Move font-family declaration to html::after

--- a/packages/foundations/scss/icons/relative.scss
+++ b/packages/foundations/scss/icons/relative.scss
@@ -59,6 +59,9 @@
 }
 
 /* pre-load icon fallback font */
-head {
-  font-family: icon-font-fallback, sans-serif;
+html::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    font-family: icon-font-fallback,sans-serif;
 }
