fix: issue with cut placeholder

--- a/packages/components/src/styles/internal/_select-components.scss
+++ b/packages/components/src/styles/internal/_select-components.scss
@@ -21,7 +21,7 @@ $select-icon-padding: calc(
 
 %select-absolute-placeholder {
 	position: absolute;
-	inset-block-end: 0;
+	inset-block-start: 0;
 	inset-inline-start: 0;
 	opacity: 0;
 
