--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -17,11 +17,17 @@
 			[disabled]="exampleProps?.disabled"
 			[required]="exampleProps?.required"
 			[showLabel]="exampleProps?.showLabel"
+			[labelPosition]="exampleProps?.labelPosition"
+			[accent]="exampleProps?.accent"
 			[size]="exampleProps?.size"
-			[emphasis]="exampleProps?.emphasis"
 			[icon]="exampleProps?.icon"
 			[iconTrailing]="exampleProps?.iconTrailing"
+			[iconLeading]="exampleProps?.iconLeading"
 			[validation]="exampleProps?.validation"
+			[invalidMessage]="exampleProps?.invalidMessage"
+			[validMessage]="exampleProps?.validMessage"
+			[message]="exampleProps?.message"
+			[showMessage]="exampleProps?.showMessage"
 		>
 			{{ exampleName }}
 		</db-switch>
