--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -28,6 +28,7 @@
 			[validMessage]="exampleProps?.validMessage"
 			[message]="exampleProps?.message"
 			[showMessage]="exampleProps?.showMessage"
+			[label]="exampleProps?.label"
 		>
 			{{ exampleName }}
 		</db-switch>
