fix(): prevent space after label by disabling eslint for label

--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -30,8 +30,9 @@
 			[showMessage]="exampleProps?.showMessage"
 			[label]="exampleProps?.label"
 		>
-			{{ exampleName }}
-		</db-switch>
+			<!-- eslint-disable-next-line -->
+			{{ exampleName }}</db-switch
+		>
 		@if (
 			exampleProps?.showLabel !== undefined &&
 			exampleProps?.showLabel !== null &&
