fix(): prevent space after label by disabling eslint for label

--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -31,7 +31,9 @@
 			[label]="exampleProps?.label"
 		>
 			<!-- eslint-disable-next-line -->
-			{{ exampleName }}</db-switch
+			{{
+				exampleProps?.label ? exampleProps?.label : exampleName
+			}}</db-switch
 		>
 		@if (
 			exampleProps?.showLabel !== undefined &&
