--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -17,7 +17,7 @@
 			[disabled]="exampleProps?.disabled"
 			[required]="exampleProps?.required"
 			[showLabel]="exampleProps?.showLabel"
-			[labelPosition]="exampleProps?.labelPosition"
+			[variant]="exampleProps?.variant"
 			[accent]="exampleProps?.accent"
 			[size]="exampleProps?.size"
 			[icon]="exampleProps?.icon"
